--- a/project5.css
+++ b/project5.css
@@ -6,17 +6,18 @@
   padding: 0;
   color: #ddd;
   font-family: Arial, Helvetica, sans-serif;
+  user-select: none;
 }
 .opc {
   opacity: 0;
 }
-.dn{
+.dn {
   display: none;
 }
 :root {
   --red: rgba(219, 0, 0, 0.787);
   --yellow: rgb(179, 153, 11);
-  --color-font:#060644;
+  --color-font: #060644;
 }
 li {
   list-style: none;
@@ -25,52 +26,53 @@ body {
   background: #333;
 }
 
-
-.lt, .rt, .lt12, .rt12, .ct{
+.lt,
+.rt,
+.lt12,
+.rt12,
+.ct {
   font-size: 10px;
   font-weight: bold;
   position: absolute;
   top: -12px;
 }
-.lt{
+.lt {
   left: 0px;
 }
-.rt{
+.rt {
   right: 0px;
 }
-.lt12{
+.lt12 {
   left: -12px;
 }
-.rt12{
+.rt12 {
   right: -12px;
 }
-.ct{
+.ct {
   left: 50%;
   transform: translateX(-50%);
 }
-.y{
+.y {
   color: var(--yellow);
 }
-.r{
-  color:var(--red)
+.r {
+  color: var(--red);
 }
-.w{
-  color:var(--withe)
+.w {
+  color: var(--withe);
 }
 /************************************ 
           End Globals
  *************************************/
- /************************************ 
+/************************************ 
           Star clculatrice
  *************************************/
-
-
 
 .clc-container {
   display: flex;
   align-items: center;
   justify-content: center;
-  max-width:100%;
+  max-width: 100%;
 }
 .body {
   background: rgb(31, 31, 31);
@@ -92,6 +94,7 @@ body {
   text-align: center;
   padding: 15px;
 }
+
 .screen {
   width: 100%;
   height: 110px;
@@ -99,82 +102,84 @@ body {
   position: relative;
   background: rgba(147, 255, 147, 0.198);
   margin: auto;
-  box-shadow: inset 0 0 15px rgb(109, 106, 106)
+  box-shadow: inset 0 0 15px rgb(109, 106, 106);
 }
-.screen .logo{
-  position:absolute;
-  top:0;
-  left:0;
+.screen .logo {
+  position: absolute;
+  top: 0;
+  left: 0;
   display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    color: var(--color-font);
-    font-weight: bold;
-    font-size: 46px;
-}
-.screen .logo span{
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
   color: var(--color-font);
-  border:2px solid var(--color-font);
+  font-weight: bold;
+  font-size: 46px;
+}
+.screen .logo span {
+  color: var(--color-font);
+  border: 2px solid var(--color-font);
   border-radius: 50%;
   font-size: 16px;
   position: relative;
   top: 10px;
   padding: 0 4px;
-
 }
 
 .screen .par-screen {
-  padding:2px 6px ;
+  padding: 2px 6px;
   color: var(--color-font);
-  /* font-size: 26px; */
 }
-.screen .par-screen .header{
-  /* background-color: red; */
+.screen .par-screen .header {
   width: 100%;
-  height:12px;
-  display:flex;
+  height: 12px;
+  display: flex;
 }
-.screen .par-screen .header span{
-    font-size: 10px;
-    padding: 0px 2px;
-    border-radius:2px;
-    font-weight:bold;
-    margin:0 1px ;
-    color:  var(--color-font);
+.screen .par-screen .header span {
+  font-size: 10px;
+  padding: 0px 2px;
+  border-radius: 2px;
+  font-weight: bold;
+  margin: 0 1px;
+  color: var(--color-font);
 }
-.screen .par-screen .header span.bg{
+.screen .par-screen .header span.bg {
   background: var(--color-font);
   color: #364b36;
 }
 .screen .note {
   font-size: 26px;
-  margin-top:3px;
+  margin-top: 3px;
   display: flex;
- 
 }
-.screen .note .create{
+.screen .note .create {
   color: var(--color-font);
 }
-.screen .note .col{
-  display: inline-block;
-  width:4px;
-  height:20px;
+.screen .note .col {
+  width: 4px;
+  height: 20px;
   background: var(--color-font);
   position: relative;
   top: 4px;
-  animation: mycol .9s infinite;
+  animation: mycol 0.9s infinite;
 }
-@keyframes mycol{
-  0%{
+@keyframes mycol {
+  0% {
     opacity: 1;
   }
-  100%{
+  100% {
     opacity: 0;
   }
 }
 
+#result {
+  position: absolute;
+  bottom: 0px;
+  right: 8px;
+  color: inherit;
+  font-size: 26px;
+}
 /*=====================================
         1/  Star Controls Buttons
  =====================================*/
@@ -186,20 +191,15 @@ body {
   width: 100%;
   margin: auto;
 }
-/* .left{
-  display:none;
-}.right{
-  display:none;
-}.center{
-  display:none;
-} */
+
 .btn-controls li {
   border-radius: 50%;
   width: 40px !important;
   height: 30px !important;
   background: rgba(13, 13, 128, 0.781);
   position: relative;
-  box-shadow: 0 0 2px 2px rgb(11 11 62 / 52%);}
+  box-shadow: 0 0 2px 2px rgb(11 11 62 / 52%);
+}
 .btn-controls li:nth-child(3) {
   width: 80px !important;
   height: 70px !important;
@@ -215,28 +215,6 @@ body {
   top: 10px;
 }
 
-/* .btn-controls li::before {
-  font-size: 10px;
-  font-weight: bold;
-  position: absolute;
-  left: 50%;
-  top: -12px;
-  transform: translateX(-50%);
-}
-.btn-controls li:nth-child(1)::before {
-  content: "SHIFT";
-  color: var(--yellow);
-}
-.btn-controls li:nth-child(2)::before {
-  content: "SHIFT";
-  color: var(--red);
-}
-.btn-controls li:nth-child(4)::before {
-  content: "MODE";
-}
-.btn-controls li:nth-child(5)::before {
-  content: "ON";
-} */
 .btn-controls li:nth-child(3) > span {
   position: absolute;
 }
@@ -264,7 +242,7 @@ body {
 /*=====================================
           End Controls Buttons
  =====================================*/
- /*=====================================
+/*=====================================
         2/  Star (log/ln/sin...) Buttons
  =====================================*/
 .log {
@@ -274,8 +252,8 @@ body {
   width: 100%;
 }
 
-.log >div {
-  position:relative;
+.log > div {
+  position: relative;
   margin: 10px 5px;
   background: #333;
   padding: 5px 3px;
@@ -284,24 +262,24 @@ body {
   border-radius: 6px 6px 10px 10px;
   box-shadow: 0 0 10px rgba(14, 11, 11, 0.993);
 }
- /*=====================================
+/*=====================================
           End (log/ln/sin...) Buttons
  =====================================*/
-  /*=====================================
-        3/ Star Numbers Buttons
+/*=====================================
+        3/ Star bottomNumbers Buttons
  =====================================*/
-.numbers {
+.bottomNumbers {
   text-align: center;
   display: grid;
   grid-template-columns: repeat(5, auto);
   width: 100%;
-  margin-top:5px;
+  margin-top: 5px;
 }
-.numbers >div {
-  position:relative;
+.bottomNumbers > div {
+  position: relative;
   margin: 10px 7px;
   background: #262525;
-  padding:6px 3px;
+  padding: 6px 3px;
   font-size: 16px;
   width: 40px;
   font-weight: 600;
@@ -312,25 +290,21 @@ body {
   color: #000;
   background: rgba(223, 140, 6, 0.897) !important;
 }
-  /*=====================================
-         End Numbers Buttons
+/*=====================================
+         End bottomNumbers Buttons
  =====================================*/
 
-
- .btn-controls li,.log>div,.numbers>div{
- transition: opacity .2s;
+.btn-controls li,
+.log > div,
+.bottomNumbers > div {
+  transition: opacity 0.2s;
 }
- /* .btn-controls li:hover ,.log >div:hover ,.numbers >div:hover{
- 
-   opacity: 0.7;
- }  */
- .btn-controls li:active ,.log >div:active ,.numbers >div:active{
- transform: scale(.9);
-} 
+.btn-controls li:active,
+.log > div:active,
+.bottomNumbers > div:active {
+  transform: scale(0.9);
+}
 
-
-
-
- /************************************ 
+/************************************ 
           End clculatrice
  *************************************/
